FIx title page image stretch

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -319,6 +319,7 @@ th {
     height:100%;
 }
 .highlights-image img {
+    width:100%;
     height: 100%;
     object-fit: cover;
     object-position:center center;
